typescript/checker/tests/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3.ts.stderr
error: TS2427
 --> $DIR/tests/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration3.ts:1:1
  |
1 | public interface I {
  | ^^^^^^

